--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: webcache-backend
     env: docker
     dockerContext: backend
-    dockerfilePath: backend/Dockerfile
+    dockerfilePath: Dockerfile
     plan: free
     healthCheckPath: /api/health
     envVars:
