--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "puppeteer": "^24.37.3"
+    "puppeteer": "^24.37.3",
+    "puppeteer-core": "^24.37.3",
+    "@sparticuz/chromium": "^133.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.29.0",
