--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
     "axios": "^1.13.5",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
@@ -17,9 +18,9 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "mongodb": "^7.1.0",
     "puppeteer": "^24.37.3",
-    "puppeteer-core": "^24.37.3",
-    "@sparticuz/chromium": "^133.0.0"
+    "puppeteer-core": "^24.37.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.29.0",
