--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@sparticuz/chromium": "^133.0.0",
     "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.1.0",
+    "mongoose": "^9.2.1",
     "puppeteer": "^24.37.3",
     "puppeteer-core": "^24.37.3"
   },
