--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,11 @@ build
 
 # Misc
 .DS_Store
+# Environment & Keys
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+firebase-admin-sdk.json
+*.pem
 
 # Logs
 npm-debug.log*
