--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^12.9.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
