--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,15 @@
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^133.0.0",
     "axios": "^1.13.5",
-    "bcryptjs": "^3.0.3",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "firebase-admin": "^13.1.0",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1",
-    "puppeteer": "^24.37.3",
-    "puppeteer-core": "^24.37.3"
+    "puppeteer": "^24.37.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.29.0",
