--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,20 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "axios-retry": "^4.5.0",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
-    "firebase-admin": "^13.1.0",
+    "firebase-admin": "^13.6.1",
+    "geoip-lite": "^1.4.10",
     "helmet": "^8.1.0",
-    "puppeteer": "^24.37.3"
+    "node-nmap": "^4.0.0",
+    "puppeteer": "^24.37.3",
+    "ssl-checker": "^2.0.10",
+    "ua-parser-js": "^2.0.9",
+    "whois": "^2.16.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.29.0",
