--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "firebase": "^12.9.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "lodash": "^4.17.23",
+    "lucide-react": "^0.575.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
